<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="google_maps_key">AIzaSyD7JEsjyD4txA-88_O45mN_PWhrN22gpI0</string>
    <string name="more_sale">More Sales</string>
    <string name="deliveryaddress">choice delivery place</string>
    <string name="noaddressfound">No address found</string>
    <string name="app_name">CityRolls</string>
    <string name="action_settings">Settings</string>
    <string name="addcomment">you must add rate!!</string>
    <string name="adddetailsaddress">Add Address details</string>
    <string name="addratesuccess">rate add successfully</string>
    <string name="addressdetails">address details</string>
    <string name="addtocart">Add To Cart</string>
    <string name="addtocart2">Add To Cart</string>
    <string name="addtocartsuccess">Add to Cart successfully</string>
    <string name="aleady_exists">Already exists in cart</string>
    <string name="cannot_fetch_address">"enable to find address "</string>
    <string name="cart">Your Cart</string>
    <string name="cash">cash</string>
    <string name="charge_ready">ready to charge</string>
    <string name="charge_rules">charge rules</string>
    <string name="choice_depart">Choice Department</string>
    <string name="choice_location">Choice delivery place</string>
    <string name="statues1">Under review</string>
    <string name="statues2">Shipped</string>
    <string name="statues3">Charging</string>
    <string name="statues4">Delivered</string>
    <string name="choice_payment_way">Choice Payment Way</string>
    <string name="choice_size">Choice Size</string>
    <string name="client">Client</string>
    <string name="coin">L.E</string>
    <string name="addresses">My Addresses</string>
    <string name="day_offers">Day offers</string>
    <string name="dayoffer">Day offers</string>
    <string name="degree_rate">Rate Ratio</string>
    <string name="deletefromfavsucces">delete from favorite</string>
    <string name="deliveried">Delivered</string>
    <string name="diffs_product">Different Products</string>
    <string name="error_in_data">"error in data "</string>
    <string name="error_tryagani">error,try again</string>
    <string name="famous_product">famous products</string>
    <string name="favnotfound">no favorite products found</string>
    <string name="favorites_products">Favorites Products</string>
    <string name="finish_order">Finish Order</string>
    <string name="free_charge">Free Charge</string>
    <string name="from">From</string>
    <string name="gotoorders">Go to Orders</string>
    <string name="login">Login</string>
    <string name="loginfirst">You Must Login First</string>
    <string name="loout">"Logout "</string>
    <string name="main">MainPage</string>
    <string name="more">more</string>
    <string name="my_order">My Orders</string>
    <string name="myorders">My Orders</string>
    <string name="newuser">Register New User</string>
    <string name="noaddress">No Address Found</string>
    <string name="noitemsincart">No Products in Your Cart</string>
    <string name="norates">No Rates Found</string>
    <string name="nosearchname">Add Product Name</string>
    <string name="notfound">"No Found "</string>
    <string name="nothaveaccount">You have not acount? Register Now</string>
    <string name="notifications">Notification</string>
    <string name="num">Plot</string>
    <string name="offers">Offers</string>
    <string name="order_date">Order Date</string>
    <string name="order_details">Details</string>
    <string name="confirm"> confirm the order Cash </string>
    <string name="order_notes">Write here Details of the request in the case of requesting an offer</string>
    <string name="order_num">Order Id :</string>
    <string name="password">Password</string>
    <string name="payment_way">"Payment : "</string>
    <string name="payoptions">Payment Options</string>
    <string name="paypal">Payapal</string>
    <string name="phone">Phone</string>
    <string name="product_des">Description</string>
    <string name="product_details">Product Details</string>
    <string name="product_num">"Products : "</string>
    <string name="product_rates">Products Rate</string>
    <string name="products_orders">"Products of Order : "</string>
    <string name="productsof">Products</string>
    <string name="rate">"rate "</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_product">Rate Product</string>
    <string name="rates">Rates</string>
    <string name="realcoin">rial</string>
    <string name="remendier">available</string>
    <string name="repassword">Re-Password</string>
    <string name="requestnotallow">You Can not request more than available quentity</string>
    <string name="search">search about delivery place</string>
    <string name="searchabout">search by products</string>
    <string name="send">confirm</string>
    <string name="sendrate">send</string>
    <string name="read_more">Read More....</string>
    <string name="sure_order">Confirm Order</string>
    <string name="title">Login</string>
    <string name="choosetitle">Choose from Our Types</string>
    <string name="total">Total :</string>
    <string name="under_delivery">deliveried</string>
    <string name="user_rates">User rates</string>
    <string name="username">user name</string>
    <string name="chooseRestaurants">Restaurants</string>
    <string name="choosFreeze">Freeze Products</string>
    <string name="wait">Waiting...</string>
    <string name="write_comment">"write a coment "</string>
    <string name="writecomment">write tou comment</string>
    <string name="cuurency">cuurency</string>
    <string-array name="filters">
        <item>More Rate</item>
        <item>Less Price</item>
        <item>More Price</item>
    </string-array>
    <string name="complete">"complete your data "</string>
    <string name="passworsnotmatch">passwords not equel</string>
    <string name="register">register</string>
    <string name="registersuccess">register successfully</string>
    <string name="hello">"Hello "</string>
    <string name="disscount">sale</string>
    <string name="favorite">Favorite</string>
    <string name="orderfound">No Orders Found for you</string>
    <string name="youlogout">You Are Logout</string>
    <string name="product_name">Product name</string>
    <string name="related">Related Products</string>
    <string name="newaddress">Add new address</string>
    <string name="editaddress"> edit address </string>
    <string name="save">save</string>
    <string name="choicecountry"> type address details </string>
    <string name="choicecity">choice your city/state/region</string>
    <string name="choicename">choice your name</string>
    <string name="choicephone">type your phone</string>
    <string name="addlocation">choice Street address, post office, apartment, suite, unit</string>
    <string name="popular_products">Popular products</string>
    <string name="error">Error</string>
    <string name="frame_load_failed">Failed to load, Please try again later or contact us if this error continue</string>
    <string name="tab_to_retry">Tab to try again</string>
    <string name="press_back">Press Back again to Exit</string>
    <string name="close">Close</string>
    <string name="glasses">Glasses</string>
    <string name="homegard"><![CDATA[Home & Gardens]]></string>
    <string name="electronics">Electronics</string>
    <string name="mobiles">Mobiles</string>
    <string name="cloth">Cloth</string>
    <string name="currency">pound</string>
    <string name="contact">Contact us</string>
    <string name="sendreq"> send your message </string>
    <string name="more_sales">more sales</string>
    <string name="more_rates">  Last Products </string>
    <string name="suggestedproduct">Recommended Products</string>
    <string name="aboutus"> Contact Us</string>
    <string name="choose_currency">choose currency </string>
    <string name="your_selected">Your selected item Is</string>
    <string name="conditions">Terms and Conditions </string>
    <string name="chat">private messages </string>
    <string name="best_seller">Best Seller</string>
    <string name="empty">write your message </string>
    <string name="now">now</string>
    <string name="available">available</string>
    <string name="piece">piece</string>
    <string name="color">Chose color</string>
    <string name="product_color">Product color</string>
    <string name="ok"> Ok </string>
    <string name="if_resturant"> : If the request is made through the restaurant, you will be contacted within 15 minutes</string>
    <string name="if_company"> : If frozen products are requested, we will contact you tomorrow at 10 am </string>
    <string name="notes">*Add a note</string>
    <string name="cancel">cancel</string>
</resources>