<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".presentationn.screens.feature.payment.PaymentFragment">


    <TextView
        android:id="@+id/pay_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payoptions"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/order_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/white_rounded_background"
        android:hint="@string/order_details"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_options" />

    <TextView
        android:id="@+id/cash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/red"
        android:fontFamily="@font/mohamed"
        android:gravity="center"

        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.85" />

    <ImageView
        android:id="@+id/paypal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:src="@drawable/paypal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />


</androidx.constraintlayout.widget.ConstraintLayout>