<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".presentationn.screens.feature.login.LoginFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/newaddress"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment
                android:id="@+id/usermap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="0dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/linear_background_for_writecomment"
                android:gravity="center_vertical|start"
                android:hint="@string/choicephone"
                android:inputType="phone"
                android:paddingStart="40dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usermap"
                app:layout_constraintWidth_percent="0.8" />

            <View
                android:id="@+id/view6"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="15dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/phone"
                app:layout_constraintStart_toStartOf="@id/phone"
                app:layout_constraintTop_toTopOf="@id/phone" />


            <EditText
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/linear_background_for_writecomment"
                android:gravity="center_vertical|start"
                android:hint="@string/addlocation"
                android:paddingStart="40dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone"
                app:layout_constraintWidth_percent="0.8" />

            <View
                android:id="@+id/view1"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="15dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/location"
                app:layout_constraintStart_toStartOf="@id/location"
                app:layout_constraintTop_toTopOf="@id/location" />


            <EditText
                android:id="@+id/country"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/linear_background_for_writecomment"
                android:gravity="center_vertical|start"
                android:hint="@string/choicecountry"
                android:paddingStart="40dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location"
                app:layout_constraintWidth_percent="0.8" />

            <View
                android:id="@+id/view2"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="15dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/country"
                app:layout_constraintStart_toStartOf="@id/country"
                app:layout_constraintTop_toTopOf="@id/country" />





            <EditText
                android:id="@+id/notes"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/linear_background_for_writecomment"
                android:gravity="center_vertical|start"
                android:hint="@string/notes"
                android:paddingStart="40dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country"
                app:layout_constraintWidth_percent="0.8" />

            <View
                android:id="@+id/view4"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="15dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/notes"
                app:layout_constraintStart_toStartOf="@id/notes"
                app:layout_constraintTop_toTopOf="@id/notes" />


            <TextView
                android:id="@+id/send"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/linear_background_for_addtocart"
                android:gravity="center"
                android:onClick="send"
                android:padding="5dp"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notes"
                app:layout_constraintWidth_percent="0.55" />

            <ImageView
                android:id="@+id/mMarker"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/loc"
                app:layout_constraintBottom_toBottomOf="@id/usermap"
                app:layout_constraintEnd_toEndOf="@id/usermap"
                app:layout_constraintStart_toStartOf="@id/usermap"
                app:layout_constraintTop_toTopOf="@id/usermap" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>